k8s/04-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cert-generator-deployment
  namespace: anurieva
  labels:
    app: cert-generator
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: cert-generator
  template:
    metadata:
      labels:
        app: cert-generator
    spec:
      automountServiceAccountToken: false
      containers:
        - name: cert-generator
          image: cert-generator:1.1.0
          imagePullPolicy: Never
          ports:
            - containerPort: 3001
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
              ephemeral-storage: "100Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
              ephemeral-storage: "500Mi"
          readinessProbe:
            httpGet:
              path: /health
              port: 3001
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 2
