k8s/05-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cert-generator-service
  namespace: anurieva
  labels:
    app: cert-generator
spec:
  type: ClusterIP
  selector:
    app: cert-generator
  ports:
    - name: http
      port: 80
      targetPort: 3001
