k8s/06-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cert-generator-ingress
  namespace: anurieva
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: cert-generator.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cert-generator-service
                port:
                  number: 80
